# LLM-Knowledge-Base

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG-history.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  findings.md  progress.md  pyproject.toml  requirements-augment.txt  requirements-dev.txt  requirements-eval.txt  requirements-formats.txt  requirements-hybrid.txt  requirements-runtime.txt  requirements.txt  task_plan.md
.claude/agents/: wiki-reviewer.md
.github/workflows/: ci.yml
.obsidian/: workspace.json
demo/: README.md
demo/wiki/: _categories.md  _sources.md  contradictions.md  index.md  log.md
docs/architecture/: architecture-diagram-detailed.html  architecture-diagram.html
docs/guides/: quickstart-obsidian.html  quickstart-obsidian.md
docs/reference/: README.md  architecture.md  conventions.md  error-handling.md  implementation-status.md  ingestion-commands.md  mcp-servers.md  module-map.md  opus-47-notes.md  testing.md  workflows.md
docs/research/: sdlc-oss-landscape-2026-04-27.md
docs/reviews/: 2026-04-25-comprehensive-repo-review.html  2026-04-25-comprehensive-repo-review.md
others/: architecture-diagram.html
raw/articles/: karpathy-llm-knowledge-bases-tweet.md  obsidian-web-clipper-overview.md
research/: 2026-04-21-claude-obsidian-inspiration-ideas.md  agent-architecture-research.md  gbrain-analysis.md  karpathy-community-followup-2026-04-12.md  karpathy-community-followup-2026-04-13.md  karpathy-llm-knowledge-bases-analysis-2026-04-21.md  karpathy-llm-knowledge-bases-analysis.md  mcp-servers-research.md  project-ideas.md  python-library-survey.md  tooling-research.md
scripts/: hook_review.py  verify_docs.py
src/kb/: __init__.py  capture.py  cli.py  config.py  errors.py  mcp_server.py
templates/: article.yaml  book.yaml  capture.yaml  capture_prompt.txt  comparison.yaml  conversation.yaml  dataset.yaml  paper.yaml  podcast.yaml  repo.yaml  synthesis.yaml  video.yaml
tests/: conftest.py  test_backlog_by_file_cycle1.py  test_backlog_by_file_cycle2.py  test_backlog_by_file_cycle3.py  test_backlog_by_file_cycle4.py  test_backlog_by_file_cycle6.py  test_backlog_by_file_cycle7.py  test_bm25.py  test_capture.py  test_cli.py  test_compile.py  test_compiler_mcp_v093.py  test_config.py  test_cycle10_browse.py  test_cycle10_capture.py  test_cycle10_extraction_validation.py  test_cycle10_linker.py  test_cycle10_quality.py  test_cycle10_safe_call.py  test_cycle10_validate_wiki_dir.py  test_cycle10_vector_min_sim.py  test_cycle11_cli_imports.py  test_cycle11_conftest_fixture.py  test_cycle11_ingest_coerce.py  test_cycle11_stale_results.py  test_cycle11_task6_mcp_ingest_type.py  test_cycle11_utils_pages.py  test_cycle12_config_project_root.py  test_cycle12_conftest.py  test_cycle12_frontmatter_cache.py  test_cycle12_io_sweep.py  test_cycle12_mcp_console_script.py  test_cycle12_sanitize_context.py  test_cycle13_augment_raw_dir.py  test_cycle13_frontmatter_migration.py  test_cycle13_sweep_wiring.py  test_cycle14_augment_key_order.py  test_cycle14_config_constants.py  test_cycle14_coverage_gate.py  test_cycle14_frontmatter_fields.py  (+226 more)
tests/_helpers/: __init__.py  api_key.py
tests/fixtures/: injection_payloads.py
wiki/: _categories.md  _sources.md  contradictions.md  index.md  log.md
wiki/concepts/: compile-not-retrieve.md  finetuning.md  incremental-compilation.md  (+6 more)
(+512 files in other folders)
