[project]
name = "llm-wiki-flywheel"
version = "0.9.10"
description = "LLM-maintained knowledge wiki — compile raw sources into structured, interlinked markdown."
requires-python = ">=3.12"
readme = "CLAUDE.md"
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.0",
    "fastmcp>=2.0",
    "networkx>=3.0",
    "anthropic>=0.7",
    "PyYAML>=6.0",
]

[project.scripts]
kb = "kb.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:faker -p no:langsmith_plugin"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
