[project]
name = "llm-wiki-flywheel"
version = "0.11.0"
description = "LLM-maintained knowledge wiki — compile raw sources into structured, interlinked markdown."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.0",
    "fastmcp>=2.0",
    "networkx>=3.0",
    "anthropic>=0.7",
    "PyYAML>=6.0",
    "jsonschema>=4.20",
]

[project.scripts]
kb = "kb.cli:cli"
kb-mcp = "kb.mcp:main"

[project.optional-dependencies]
hybrid = [
    "model2vec>=0.5.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.26",
]
augment = [
    "httpx>=0.27",
    "httpcore>=1.0",
    "trafilatura>=1.12",
]
formats = [
    "nbformat>=5.0,<6.0",
]
eval = [
    "ragas>=0.4",
    "litellm>=1.83",
    "datasets>=4.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "pytest-httpx>=0.30",
    "pip-audit>=2.10",
    "build>=1.2",
    "twine>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:faker -p no:langsmith_plugin"
markers = [
    "skip_default_robots: opt out of the augment fetcher autouse robots.txt mock",
    "slow: marks tests as slow (deselect with '-m not slow')",
    "network: marks tests requiring network access",
    "integration: marks integration tests requiring real filesystem or DB",
    "llm: marks tests that invoke a real LLM API",
    "lint: marks tests that enforce cross-file lint rules (cycle-20 star-import lint)",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
